# RoarGraph

./: CMakeLists.txt  build.sh  run.sh
include/: index_bipartite.h  index_bipartite_disk.h
include/SQ/: CMakeLists.txt
include/SQ/quant/: sq4_quant.hpp  sq8_quant.hpp
include/SQ/simd/: distance.hpp
tests/: CMakeLists.txt  test_search_roargraph_on_disk_use_sq.cpp
